|
Quick Lists
|
|
Bug ID:
|
6621144
|
|
Votes
|
0
|
|
Synopsis
|
CMS: assertion failure "is_cms_thread == Thread::current()->is_ConcurrentGC_thread()"
|
|
Category
|
hotspot:garbage_collector
|
|
Reported Against
|
|
|
Release Fixed
|
hs12(b02)
|
|
State
|
10-Fix Delivered,
bug
|
|
Priority:
|
3-Medium
|
|
Related Bugs
|
|
|
Submit Date
|
24-OCT-2007
|
|
Description
|
See comments for email trail describing problem and solution.
Posted Date : 2007-10-24 19:12:21.0
|
|
Work Around
|
N/A
|
|
Evaluation
|
See comments and suggested fix fields.
Posted Date : 2007-10-24 19:13:56.0
Fixed via jprt:2008-02-17-065058.ysr.gc_fixes in hg/hotspot-gc
Posted Date : 2008-02-22 00:34:49.0
|
|
Comments
|
PLEASE NOTE: JDK6 is formerly known as Project Mustang
|
|
|
 |