6621144: CMS: assertion failure "is_cms_thread == Thread::current()->is_ConcurrentGC_thread()"

Take lock conditionally (in asynchronous mode only) when updating the dead-object map.

Reviewed-by: jmasa